--- a/Assignment2/templates/users_list.html
+++ b/Assignment2/templates/users_list.html
@@ -33,7 +33,7 @@
         <td>{{object.name}}</td>
         <td>{{object.surname}}</td>
         <td>{{object.salary}}</td>
-        <td>{{object.phone_name}}</td>
+        <td>{{object.phone}}</td>
         <td>{{object.cname}}</td>
         <td> <a href="{%url 'updateUser' object.email%}">Edit</a>
             <a href="{%url 'deleteUsers' object.email%}">Delete</a></td>
